[package]
name = "regex_quote_fixer"
version = "0.1.2"
edition = "2021"
authors = ["Frank Schwidom"]
description = "Rewrites grep regexpressions for the use in the regex crate."
license-file = "LICENSE"
homepage = "https://github.com/schwidom/regex_quote_fixer"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10.2"
