[package]
name = "regex_quote_fixer"
version = "0.1.6"
edition = "2021"
authors = ["Frank Schwidom"]
description = "Rewrites grep regexpressions for the use in the regex crate."
documentation = "https://docs.rs/regex_quote_fixer"
license-file = "LICENSE"
homepage = "https://github.com/schwidom/regex_quote_fixer"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10.2"
